Chapter 10: Updating, Showing and deleting users

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <%= link_to t(".tutorial"), Settings.link.rails_home_link %>
+    <%= link_to t("tutorial"), Settings.link.rails_home_link %>
     <%= link_to "Michael Hartl", Settings.link.rails_author_link %>
   </small>
   <nav>
