--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,11 @@
 <% provide :title, t(".fore_title") %>
 <div class="center jumbotron">
   <h1>
-    <%= t ".name" %>
+    <%= t "success_signup" %>
   </h1>
   <h2>
     <%= t ".intro_1" %>
-    <%= link_to t(".tutorial"), Settings.link.rails_home_link %>
+    <%= link_to t("tutorial"), Settings.link.rails_home_link %>
     <%= t ".intro_2" %>
   </h2>
   <%= link_to t(".signup") , signup_path, class: "btn btn-lg btn-primary" %>
