--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,14 @@
 <% provide :title, t(".fore_title") %>
 <% provide :button_text, t(".submit") %>
 <h1>
-  <%= t ".fore_title" %>
+  <%= t ".title" %>
 </h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render "form" %>
+    <div class="gravatar_edit">
+      <%= gravatar_for @user %>
+      <%= link_to t(".change"), Settings.link.gravatar_email_link, target: "_blank" %>
+    </div>
   </div>
 </div>
-
