--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,8 +1,7 @@
-<% provide :title, t(".fore_title") %>
-<h1><%= t "sample_app" %></h1>
-<p><%= t "user_mailer.account_activation.hi" %> <%= @user.name %>,</p>
+<h1><%= t ".subject" %></h1>
+<p><%= t ".hi" %> <%= @user.name %>,</p>
 <p>
   <%= t "success_signup" %>
-  <%= t "user_mailer.account_activation.click_to_activate" %>
+  <%= t ".click_to_activate" %>
 </p>
-<%= link_to t("user_mailer.account_activation.activate"), edit_account_activation_url(id:@user.activation_token, email: @user.email) %>
+<%= link_to t(".activate"), edit_account_activation_url(id:@user.activation_token, email: @user.email) %>
