--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,16 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
     <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
+
+    <%= javascript_include_tag "i18n" %>
+    <%= javascript_include_tag "translations", skip_pipeline: true %>
   </head>
 
+  <script type="text/javascript">
+    I18n.defaultLocale = "<%= I18n.default_locale %>"
+    I18n.locale = "<%= I18n.locale || I18n.default_locale %>"
+  </script>
+  
   <body>
     <%= render "layouts/header" %>
     <div class="container">
